--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,30 +1,68 @@
 body {
+  background: #fff;
+  color: #193E6F;
+  font-family: Heebo,sans-serif;
+}
+.top {
   background: #193E6F;
+  border-radius: 30px;
   color: #fff;
-  font-family: 'Scope One', serif;
-
+  margin-bottom: 40px;
+  margin-top: 40px;
+  min-height: 400px;
+  padding: 1px 40px;
+  position: relative;
+  height: 40vh;
 }
 .figure {
   position: absolute;
   right: 0;
+  bottom: 0;
+  width: 40%;
+}
+.text {
   width: 60%;
 }
 h1 {
+  font-family: 'Scope One', serif;
   font-size: 60px;
   span{
     color: #FFE800;
   }
 }
-.MuiTypography-subtitle1 {
-  width: 40%;
+.bottom {
+  font-size: 0;
+  margin-bottom: 40px;
+  & > div {
+    border: 1px solid #6485B3;
+    border-radius: 30px;
+    display: inline-block;
+    font-size: 18px;
+    width: calc(50% - 20px);
+    min-height: 300px;
+  }
+  .campain {
+    margin-right: 36px;
+  }
 }
+.MuiListItem-button {
+  display: inline-block;
+}
+.footer{
+  color: #000;
+  text-align: center;
+  a {
+    color: #0B284F;
+    font-size: 16px;
+  }
+}
+
 
 
 
 @media (min-width: 1100px) {
   .MuiContainer-maxWidthLg {
     max-width: 1100px;
-    position: relative;
   }
 }
 
